# Pac-Man

./: .env.example  .gitignore  Makefile  README.md  config.json  highscore.json  pyproject.toml  test.py
dependencies/: mazegenerator-2.0.1-py3-none-any.whl
models_compressed/: pacman.bam
src/: __main__.py  render.py
src/ghosts/: ghost.py
src/logger/: color.py  logger.py
src/parsing/: __init__.py  loader.py  model.py
src/render/: input.py  main.py  maze_3d.py  minimap.py  pacgums.py  player_controller.py  render_maze.py
src/ui/: __init__.py  __main__.py
src/ui/components/: __init__.py  background.py  button.py  input.py  logo.py  vhs_effect.py
src/ui/menu/: __init__.py  cheat_menu.py  end_screen.py  highscores_menu.py  hud.py  instructions_menu.py  main_menu.py  overlay_menu.py
