[project]
name = "pac-man"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "flake8>=7.3.0",
    "mypy>=1.20.0",
    "pydantic>=2.12.5",
    "mazegenerator",
]

[tool.uv.sources]
mazegenerator = { path = "mazegenerator-00001-py3-none-any.whl" }
